--- a/Proyecto/tau.bib
+++ b/Proyecto/tau.bib
@@ -2,3 +2,66 @@
 	title = {{PGFPlots - A LaTeX package to create plots.}},
 	url = {https://pgfplots.sourceforge.net/},
 }
+
+@incollection{sep-touring-machine,
+	author = {De Mol, Liesbeth},
+	booktitle = {The {Stanford} Encyclopedia of Philosophy},
+	publisher = {Metaphysics Research Lab, Stanford University},
+	title = {{Touring Machines}},
+	year = {2021},
+	url = {https://plato.stanford.edu/archives/win2021/entries/turing-machine/},
+	edition = {{W}inter 2021},
+	editor = {Edward N. Zalta}
+}
+
+@incollection{sep-cellular-automata,
+	author = {Berto, Francesco and Tagliabue, Jacopo},
+	title = {{Cellular Automata}},
+	booktitle = {The {Stanford} Encyclopedia of Philosophy},
+	editor = {Edward N. Zalta and Uri Nodelman},
+	howpublished = {\url{https://plato.stanford.edu/archives/win2023/entries/cellular-automata/}},
+	year = {2023},
+	edition = {{W}inter 2023},
+	publisher = {Metaphysics Research Lab, Stanford University}
+}
+
+@incollection{von-neumann-automata,
+	author = {Von Neumann, John},
+	title = {{The General and Logical Theory of Automata}},
+	booktitle = {J. von Neumann Collected Works},
+	editor = {Taub, A.},
+	year = {1963},
+}
+
+
+
+@Article{math11102322,
+AUTHOR = {Shafique, Arslan and Khan, Kashif Hesham and Hazzazi, Mohammad Mazyad and Bahkali, Ismail and Bassfar, Zaid and Rehman, Mujeeb Ur},
+TITLE = {Chaos and Cellular Automata-Based Substitution Box and Its Application in Cryptography},
+JOURNAL = {Mathematics},
+VOLUME = {11},
+YEAR = {2023},
+NUMBER = {10},
+ARTICLE-NUMBER = {2322},
+URL = {https://www.mdpi.com/2227-7390/11/10/2322},
+ISSN = {2227-7390},
+ABSTRACT = {Substitution boxes are the key factor in symmetric-key cryptosystems that determines their ability to resist various cryptanalytic attacks. Creating strong substitution boxes that have multiple strong cryptographic properties at the same time is a challenging task for cryptographers. A significant amount of research has been conducted on S-boxes in the past few decades, but the resulting S-boxes have been found to be vulnerable to various cyberattacks. This paper proposes a new method for creating robust S-boxes that exhibit superior performance and possess high scores in multiple cryptographic properties. The hybrid S-box method presented in this paper is based on Chua’s circuit chaotic map, two-dimensional cellular automata, and an algebraic permutation group structure. The proposed 16×16 S-box has an excellent performance in terms of security parameters, including a minimum nonlinearity of 102, the absence of fixed points, the satisfaction of bit independence and strict avalanche criteria, a low differential uniformity of 5, a low linear approximation probability of 0.0603, and an auto-correlation function of 28. The analysis of the performance comparison indicates that the proposed S-box outperforms other state-of-the-art S-box techniques in several aspects. It possesses better attributes, such as a higher degree of inherent security and resilience, which make it more secure and less vulnerable to potential attacks.},
+DOI = {10.3390/math11102322}
+}
+
+
+@incollection{DEWDNEY2008541,
+title = {Cellular Automata},
+editor = {Sven Erik Jørgensen and Brian D. Fath},
+booktitle = {Encyclopedia of Ecology},
+publisher = {Academic Press},
+address = {Oxford},
+pages = {541-550},
+year = {2008},
+isbn = {978-0-08-045405-4},
+doi = {https://doi.org/10.1016/B978-008045405-4.00147-6},
+url = {https://www.sciencedirect.com/science/article/pii/B9780080454054001476},
+author = {A.K. Dewdney},
+keywords = {Cells, Cellular automata, Cellular models, Chemical oscillators, Classification of cellular automata, Ecological applications, Elementary cellular automata, Epidemiology, Finite automata, Game of Life, Testing models},
+abstract = {Cellular automata, the offspring of a theme in computer science, are increasingly used as models in ecological investigation. The theme embraces a range of topics, from the theory of automata to artificial intelligence. Cellular automata, as expressions of this theme, are miniature worlds inhabited by automata, one per cell. The behavior of a cellular automaton is, or can be, extraordinarily complex, not to say lifelike. It has been the main inspiration for a new research area called artificial life or, more conservatively, complex systems. Conferences are attended by computer and mathematical scientists, along with an increasing crowd of newcomers from geography, ecology, geology, other fields, and a popular following. At the present time, ecology has a fair experience with cellular automaton models, enough to abandon the early toys and exploit the true powers of this tool as a general simulation bed. At the same time, validation and interpretation remain key problems in the use of these models.}
+}
